--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -56,17 +56,6 @@
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 				</div>
 				<div class="col-sm-9">
 					<span
@@ -74,254 +63,128 @@
 						blog </span> <br /> <br /> <br />
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-						<h4
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span style="color: #4b66b3;"><span
-								style="font-family: 'comic sans ms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-									<section id="no1">
-										<h1>소고기덮밥(30분)</h1>
-										<ol>
-											<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-												가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-												만든다.</li>
-											<li>양파, 팽이버섯, 실파 : 각각 4Cm.</li>
-											<li>소고기 : 결반대로 얇게 편썰기 1*5*0.2cm. - Tip: 편썰고 길이를 끝 잘라서
-												맞추기.</li>
-											<li>김 : 구운후(빳빳하면 안구워도 됨) 가늘게 채(하리노리).</li>
-											<li>달걀 풀어두기.</li>
-											<li>돈부리다시 : 가쓰오다시 1/2C + 간장1T + 맛술1T + 설탕 1t + 소금 약간.</li>
-											<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 풀어둔
-												계란을 전체적으로 뿌린다(80%정도까지만 익힘).</li>
-											<li>밥위에 7번에서 완성한 돈부리다시 소스를 올리고 - 김채 올려서 마무리.</li>
-											<br />* 계란은 반숙이 되도록 해야 함.
-											<br />
-											<br />* 밥이 보이지 않도록 잘 덮어야 함. - 미리 밥모양이 잘 나오게 살짝 볼록하게 밥을 자리 잡아
-											놓는게 중요.
-											<br />
-											<br />
-											<h3>요구사항</h3>
-											<br />가. 덮밥용 양념간장(돈부리 다시)을 만들어 사용하시오.
-											<br />나. 고기, 채소, 달걀은 재료 특성에 맞게 조리하여 준비한 밥 위에 올려 놓으시오.
-											<br />다. 김을 구워 칼로 잘게 썰어(하리노리) 사용하시오.
-										</ol>
-									</section>
-							</span>
-						</h4>
-						<h4
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span style="color: #4b66b3;"><span
-								style="font-family: 'comic sans ms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-									<section id="no2">
-										<h1>메밀국수(자루소바)(30분)</h1>
-										<ol>
-											<li>가쓰오다시 1C : 물 1C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-												가쓰오부시를 위에 넣어두고 8분간 우린다.(나중에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-												만든다.)</li>
-											<li>면삶을 물을 끓여둔다.</li>
-											<li>무 : 껍질을 깐 무를 강판에 갈아서 후지산 모양 만듦.</li>
-											<li>실파 : 송송썰어서 작게 만듦.</li>
-											<li>와사비 : 와사비분말과 물 비중을 3:1로 해서 되직하게 와사비 만들고 나뭇닢 모양으로 칼집을
-												낸다.</li>
-											<li>김 : 구운후 가늘게 채썬다(하리노리). 빳빳하면 굽지 않아도 된다.</li>
-											<li>끓여둔 면삶을 물을 덜어내서 따로 보관한다.</li>
-											<li>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕2T 살짝 끓인후 바로 얼음에 물에
-												식힌다.</li>
-											<li>따로 보관한 따듯한 면삶을 물을 이용해서 메밀면(동전 500원 분량)을 심지가없을때까지
-												삶는다(약 3분).-넘치려할때마다 찬물을 조금씩 부어준다.</li>
-											<li>다 익었으면 찬물로 충분히 행구고 얼음물에 직접 넣고 식힘(사리 2개 분량).</li>
-											<li>김발 위에 사리 2개(중지와 검지로 또아리를 틀어서 올려둚) 위에 김채 올리고 + 위에 만든
-												소바다시, 야꾸미 이쁘게 해서 제출.</li>
-											<br />* 뜨거운물 관리를 잘해야 함 면 익힐걸 감안해서 끓인물을 보관하거나 끓일동안 재료손질.
-											<br />
-											<br />* 면과 소바다시를 식힐때 얼음이 필요하므로 얼음관리를 잘 해야 함.
-											<br />
-											<br />* 김발은 본인 김발을 사용하면 안됨. 시험장 제공 김발이나 메뉴판 위에 제출해야 함.
-											<br />
-											<br />
-											<h3>요구사항</h3>
-											<br />가. 소바다시를 만들어 얼음으로 차게 식히시오.
-											<br />나. 메밀국수는 삶아 얼음으로 차게 식혀서 사용하시오.
-											<br />다. 메밀국수는 접시에 김발을 펴서 그 위에 올려내시오.
-											<br />라. 김은 가늘게 채 썰어(하리노리) 메밀국수에 얹어 내시오.
-											<br />마. 메밀국수, 양념(야꾸미), 소바다시를 각각 따로 담아 내시오.
-										</ol>
-									</section>
-							</span>
-						</h4>
-						<h4
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span style="color: #4b66b3;"><span
-								style="font-family: 'comic sans ms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-									<section id="no3">
-										<h1>전복버터구이(25분)</h1>
-										<ol>
-											<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
-											<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 : 전복 껍질의 얇상한 쪽에서 숫가락을
-												넣어서 관자를 자름(잘못하면 내장 터지므로 절대 조심) 내장과 전복분리(분리시 이빨도 제거-내장 안터지게
-												주의)-> 내장 모래주머니 제거(간 모양의 두툼한)-> 전복의 관자쪽 세로로 길게 칼집 내고 가로로
-												어슷썰기.</li>
-											<li>양파, 피망 : 사방 2Cm 성형(전복 크기와 비슷하게).</li>
-											<li>은행 끓는 물에 데친후 껍질 제거.</li>
-											<li>후라이팬에 식용유 1t 두르고 양파 볶기 -> 전복, 청주, 은행 -> 피망, 내장, 버터,
-												소금, 후추 넣고 볶기(타지 않게 주의- 타면 많이 감점).</li>
-											<li>접시플레이팅 : 깻잎 10시 방향- 전복버터구이 가운데 담아 마무리.</li>
-											<br />
-											<br />
-											<h3>요구사항</h3>
-											<br />가. 전복은 껍질과 내장을 분리하고 칼집을 넣어 한입 크기로 어슷하게 써시오.
-											<br />나. 내장은 모래주머니를 제거하고 데쳐 사용하시오.
-											<br />다. 채소는 전복의 크기로 써시오.
-											<br />라. 은행은 속껍질을 벗겨 사용하시오.
-										</ol>
-									</section>
-							</span>
-						</h4>
-						<h4
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span style="color: #4b66b3;"><span
-								style="font-family: 'comic sans ms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-									<section id="no4">
-										<h1>달걀찜(30분)</h1>
-										<ol>
-											<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-												가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-												만든다.</li>
-											<li>속재료를 데칠 물을 끓여둔다.</li>
-											<li>쑷갓 : 찬물 / 레몬 : 오리발 깍기 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서
-												까두기.</li>
-											<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
-											<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장 / 새우 : 사방 1Cm(만일 안
-												깐새우면 아래에서 대친 다음에 껍질 까서 사방 1Cm - 머리따서 내장손으로 제거).</li>
-											<li>끓는물에 채반으로 데치기 : 은행, 죽순, 생선살, 닭가슴살.</li>
-											<li>달걀물은 반드시 체반에 달걀심을 제거해주고 거기에 가쓰오다시 1/2C+청주 1t+맛술
-												1t+소금 넣어서 섞는다.- Tip: 달걀(1) : 가쓰오다시물(2) 비율.</li>
-											<li>냄비에 중탕으로 달걀찜 (냄비에 행주를 깔고 물을 넣은 후 위에 접시를 넣고 꾹꾹 눌러서
-												넘치지 않을정도로 물을 넣는다-그 위에 공기에 담은 재료들과 달걀물을 넣어서 8분정도 익힌다 (*공기 기포가
-												생기지 않도록 채반에 달걀물을 걸러서 곱게 내린 달걀물을 넣는다)-접시를 면포로 감싸서 올려두는게 중간게
-												계란 시간 체크하기 좋다.</li>
-											<li>푸딩처럼 익었으면 표고 버섯을 올리고 뜸들인다. 그후에 제출할때 오리발과 쑥갓을 올려서
-												제출한다.</li>
-											<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
-											<br />
-											<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
-											<br />
-											<br />
-											<h3>요구사항</h3>
-											<br />가. 찜 속재료는 각각 썰어 간 하시오.
-											<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
-											<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
-										</ol>
-									</section>
-							</span>
-						</h4>
-						<hr
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;" />
-						<br />
-						<h2
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">Officially
-							Blogging</h2>
-						<h5
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span class="label label-success">Jee &amp; Michelle</span>
-						</h5>
-						<p
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span style="font-size: medium;">Hi Everyone. This
-								is Jee &amp; Michelle. We would like to meet you guys in person,
-								it does not work right now. I pray everyone's safe, God bless
-								Us~!</span>
-						</p>
-						<br />
-						<hr
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;" />
-						<h4
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">Leave
-							a Comment:</h4>
-						<p
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span style="font-size: medium;"><span class="badge">2</span>
-								Comments:</span>
-						</p>
-						<div class="row"
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<div class="col-sm-2 text-center"
-								style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-								<img
-									src="https://bb-gbc.blackboard.com/courses/1/CRN-47027-201902/blog/_184422_1/post/_181102_1/DAGiUGTUAAEIdMT.jpg"
-									class="img-circle" height="65" width="65" alt="Avatar" />
-							</div>
-							<div class="col-sm-10"
-								style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-								<h4
-									style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-									<span style="font-size: medium;">Jinhyun Nam <small>Mar
-											29, 2020, 9:12 PM</small></span>
-								</h4>
-								<h5
-									style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-									<span style="font-size: medium;">Keep up the GREAT work!
-										I am cheering!!  What a fantastic~! such a great. I
-										appreciate~! </span>
-								</h5>
-							</div>
-							<div class="col-sm-2 text-center"
-								style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-								<img
-									src="https://bb-gbc.blackboard.com/courses/1/CRN-47027-201902/blog/_184422_1/post/_181102_1/DAGiUGTUAAEIdMT.jpg"
-									class="img-circle" height="65" width="65" alt="Avatar" />
-							</div>
-							<div class="col-sm-10"
-								style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-								<h4
-									style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-									<span style="font-size: medium;">Jinhyun Nam <small>Mar
-											30, 2020, 8:25 PM</small></span>
-								</h4>
-								<h5
-									style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-									<span style="font-size: medium;">I am so happy for you
-										guys! Finally. I am looking forward to reading about food
-										life. Thanks for the food blog.</span>
-								</h5>
-								<p
-									style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-									<span class="badge">1</span> Comment:
-								</p>
-								<div class="row"
-									style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-									<div class="col-sm-2 text-center"
-										style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-										<img
-											src="https://bb-gbc.blackboard.com/courses/1/CRN-47027-201902/blog/_184422_1/post/_181102_1/63866_29095_824.jpg"
-											class="img-circle" height="65" width="65" alt="Avatar" />
-									</div>
-									<div class="col-xs-10"
-										style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-										<h4
-											style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-											<span style="font-size: medium;">Byungjung An <small>Mar
-													30, 2020, 8:28 PM</small></span>
-										</h4>
-										<h5
-											style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-											<span style="font-size: medium;">Me too! WOW! I admit
-												it.</span>
-										</h5>
-									</div>
-								</div>
-							</div>
-						</div>
+						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<h1>소고기덮밥(30분)</h1>
+							<ol>
+								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
+									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
+									만든다.</li>
+								<li>양파, 팽이버섯, 실파 : 각각 4Cm.</li>
+								<li>소고기 : 결반대로 얇게 편썰기 1*5*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
+								<li>김 : 구운후(빳빳하면 안구워도 됨) 가늘게 채(하리노리).</li>
+								<li>달걀 풀어두기.</li>
+								<li>돈부리다시 : 가쓰오다시 1/2C + 간장1T + 맛술1T + 설탕 1t + 소금 약간.</li>
+								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 풀어둔 계란을
+									전체적으로 뿌린다(80%정도까지만 익힘).</li>
+								<li>밥위에 7번에서 완성한 돈부리다시 소스를 올리고 - 김채 올려서 마무리.</li>
+								<br />* 계란은 반숙이 되도록 해야 함.
+								<br />
+								<br />* 밥이 보이지 않도록 잘 덮어야 함. - 미리 밥모양이 잘 나오게 살짝 볼록하게 밥을 자리 잡아
+								놓는게 중요.
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 덮밥용 양념간장(돈부리 다시)을 만들어 사용하시오.
+								<br />나. 고기, 채소, 달걀은 재료 특성에 맞게 조리하여 준비한 밥 위에 올려 놓으시오.
+								<br />다. 김을 구워 칼로 잘게 썰어(하리노리) 사용하시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<h1>메밀국수(자루소바)(30분)</h1>
+							<ol>
+								<li>가쓰오다시 1C : 물 1C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서 가쓰오부시를
+									위에 넣어두고 8분간 우린다.(나중에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를 만든다.)</li>
+								<li>면삶을 물을 끓여둔다.</li>
+								<li>무 : 껍질을 깐 무를 강판에 갈아서 후지산 모양 만듦.</li>
+								<li>실파 : 송송썰어서 작게 만듦.</li>
+								<li>와사비 : 와사비분말과 물 비중을 3:1로 해서 되직하게 와사비 만들고 나뭇닢 모양으로 칼집을
+									낸다.</li>
+								<li>김 : 구운후 가늘게 채썬다(하리노리). 빳빳하면 굽지 않아도 된다.</li>
+								<li>끓여둔 면삶을 물을 덜어내서 따로 보관한다.</li>
+								<li>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕2T 살짝 끓인후 바로 얼음에 물에
+									식힌다.</li>
+								<li>따로 보관한 따듯한 면삶을 물을 이용해서 메밀면(동전 500원 분량)을 심지가없을때까지 삶는다(약
+									3분).-넘치려할때마다 찬물을 조금씩 부어준다.</li>
+								<li>다 익었으면 찬물로 충분히 행구고 얼음물에 직접 넣고 식힘(사리 2개 분량).</li>
+								<li>김발 위에 사리 2개(중지와 검지로 또아리를 틀어서 올려둚) 위에 김채 올리고 + 위에 만든
+									소바다시, 야꾸미 이쁘게 해서 제출.</li>
+								<br />* 뜨거운물 관리를 잘해야 함 면 익힐걸 감안해서 끓인물을 보관하거나 끓일동안 재료손질.
+								<br />
+								<br />* 면과 소바다시를 식힐때 얼음이 필요하므로 얼음관리를 잘 해야 함.
+								<br />
+								<br />* 김발은 본인 김발을 사용하면 안됨. 시험장 제공 김발이나 메뉴판 위에 제출해야 함.
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 소바다시를 만들어 얼음으로 차게 식히시오.
+								<br />나. 메밀국수는 삶아 얼음으로 차게 식혀서 사용하시오.
+								<br />다. 메밀국수는 접시에 김발을 펴서 그 위에 올려내시오.
+								<br />라. 김은 가늘게 채 썰어(하리노리) 메밀국수에 얹어 내시오.
+								<br />마. 메밀국수, 양념(야꾸미), 소바다시를 각각 따로 담아 내시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<h1>전복버터구이(25분)</h1>
+							<ol>
+								<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
+								<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 : 전복 껍질의 얇상한 쪽에서 숫가락을 넣어서
+									관자를 자름(잘못하면 내장 터지므로 절대 조심) 내장과 전복분리(분리시 이빨도 제거-내장 안터지게 주의)-> 내장
+									모래주머니 제거(간 모양의 두툼한)-> 전복의 관자쪽 세로로 길게 칼집 내고 가로로 어슷썰기.</li>
+								<li>양파, 피망 : 사방 2Cm 성형(전복 크기와 비슷하게).</li>
+								<li>은행 끓는 물에 데친후 껍질 제거.</li>
+								<li>후라이팬에 식용유 1t 두르고 양파 볶기 -> 전복, 청주, 은행 -> 피망, 내장, 버터, 소금,
+									후추 넣고 볶기(타지 않게 주의- 타면 많이 감점).</li>
+								<li>접시플레이팅 : 깻잎 10시 방향- 전복버터구이 가운데 담아 마무리.</li>
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 전복은 껍질과 내장을 분리하고 칼집을 넣어 한입 크기로 어슷하게 써시오.
+								<br />나. 내장은 모래주머니를 제거하고 데쳐 사용하시오.
+								<br />다. 채소는 전복의 크기로 써시오.
+								<br />라. 은행은 속껍질을 벗겨 사용하시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no4" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<h1>달걀찜(30분)</h1>
+							<ol>
+								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
+									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
+									만든다.</li>
+								<li>속재료를 데칠 물을 끓여둔다.</li>
+								<li>쑷갓 : 찬물 / 레몬 : 오리발 깍기 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
+								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
+								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장 / 새우 : 사방 1Cm(만일 안
+									깐새우면 아래에서 대친 다음에 껍질 까서 사방 1Cm - 머리따서 내장손으로 제거).</li>
+								<li>끓는물에 채반으로 데치기 : 은행, 죽순, 생선살, 닭가슴살.</li>
+								<li>달걀물은 반드시 체반에 달걀심을 제거해주고 거기에 가쓰오다시 1/2C+청주 1t+맛술 1t+소금
+									넣어서 섞는다.- Tip: 달걀(1) : 가쓰오다시물(2) 비율.</li>
+								<li>냄비에 중탕으로 달걀찜 (냄비에 행주를 깔고 물을 넣은 후 위에 접시를 넣고 꾹꾹 눌러서 넘치지
+									않을정도로 물을 넣는다-그 위에 공기에 담은 재료들과 달걀물을 넣어서 8분정도 익힌다 (*공기 기포가 생기지
+									않도록 채반에 달걀물을 걸러서 곱게 내린 달걀물을 넣는다)-접시를 면포로 감싸서 올려두는게 중간게 계란 시간
+									체크하기 좋다.</li>
+								<li>푸딩처럼 익었으면 표고 버섯을 올리고 뜸들인다. 그후에 제출할때 오리발과 쑥갓을 올려서 제출한다.</li>
+								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
+								<br />
+								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 찜 속재료는 각각 썰어 간 하시오.
+								<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
+								<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
+							</ol>
+						</section>
+						<hr />
 					</div>
-
-
-					<hr />
-					<p align="center">
-						<span style="font-size: x-large;"> </span>
-					</p>
 				</div>
+				<hr />
 			</div>
 		</div>
 	</div>
+
 	{{> include/footer}}
 </body>
 </html>
