--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -26,7 +26,7 @@
 					</h3>
 					<br />
 					<ul class="nav nav-pills nav-stacked">
-						<li class="active"><a href="#no">소고기 덮밥</a></li>
+						<li class="active"><a href="#no1">소고기 덮밥</a></li>
 						<li class="active"><a href="#no2">메밀국수(자루소바)</a></li>
 						<li class="active"><a href="#no3">전복버터구이</a></li>
 						<li class="active"><a href="#no4">달걀찜</a></li>
@@ -64,6 +64,7 @@
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<br /><br /><br />
 							<h1>소고기덮밥(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
@@ -91,6 +92,7 @@
 						</section>
 						<hr />
 						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /><br /><br />
 							<h1>메밀국수(자루소바)(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1C : 물 1C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서 가쓰오부시를
@@ -126,6 +128,7 @@
 						</section>
 						<hr />
 						<section id="no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /><br /><br />
 							<h1>전복버터구이(25분)</h1>
 							<ol>
 								<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
@@ -148,6 +151,7 @@
 						</section>
 						<hr />
 						<section id="no4" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /><br /><br />
 							<h1>달걀찜(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
