--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -196,15 +196,15 @@
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
 								<li>폰즈 = 다시물, 식초, 간장 각각 1T.</li>
 								<li>청주 알코올 날리기 + 다시물 + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓 올려제출(야꾸미, 폰즈 함께 제출).</li>
-								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
-								<br />
-								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
+								<br />* 순서를 잘 기억하고 최적화 해둬야 함(시간 모자름).
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 찜 속재료는 각각 썰어 간 하시오.
-								<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
-								<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
+								<br />가. 머리는 반으로 자르고, 몸통은 세장뜨기를 하시오.
+								<br />나. 손질한 도미살을 5~6Cm정도 자르고 소금을 뿌려, 머리와 꼬리는 데친 후 불순물을 제거하시오.
+								<br />다. 청주를 섞은 다시(국물)에 쪄내시오.
+								<br />라. 당근은 매화꽃, 무는 은행잎 모양으로 만들어 익혀내시오.
+								<br />마. 초간장(폰즈)와 양념(야꾸미)을 만들어 내시오.
 							</ol>
 						</section>
 						<hr />
