--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -215,19 +215,12 @@
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
 									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
 									만든다.</li>
-								<li>속재료를 데칠 물을 끓여둔다.</li>
-								<li>쑷갓 : 찬물 / 레몬 : 오리발 깍기 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
-								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
-								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장 / 새우 : 사방 1Cm(만일 안
-									깐새우면 아래에서 대친 다음에 껍질 까서 사방 1Cm - 머리따서 내장손으로 제거).</li>
-								<li>끓는물에 채반으로 데치기 : 은행, 죽순, 생선살, 닭가슴살.</li>
-								<li>달걀물은 반드시 체반에 달걀심을 제거해주고 거기에 가쓰오다시 1/2C+청주 1t+맛술 1t+소금
-									넣어서 섞는다.- Tip: 달걀(1) : 가쓰오다시물(2) 비율.</li>
-								<li>냄비에 중탕으로 달걀찜 (냄비에 행주를 깔고 물을 넣은 후 위에 접시를 넣고 꾹꾹 눌러서 넘치지
-									않을정도로 물을 넣는다-그 위에 공기에 담은 재료들과 달걀물을 넣어서 8분정도 익힌다 (*공기 기포가 생기지
-									않도록 채반에 달걀물을 걸러서 곱게 내린 달걀물을 넣는다)-접시를 면포로 감싸서 올려두는게 중간게 계란 시간
-									체크하기 좋다.</li>
-								<li>푸딩처럼 익었으면 표고 버섯을 올리고 뜸들인다. 그후에 제출할때 오리발과 쑥갓을 올려서 제출한다.</li>
+								<li>폰즈 = 가쓰오다시 + 간장 + 식초 각각 1T씩.</li>
+								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
+								<li>오이: 자바라기리 - 소금물 - 2~3Cm 성형.</li>
+								<li>미역: 불린 후 데쳐 미역말이 - 4Cm 성형.</li>
+								<li>해삼: 입과 항문 자르고 중앙(배쪽) 잘라서 내장, 힘줄 제거 - 1Cm 두께로 성형.</li>
+								<li>완성접시에 오이, 미역, 야꾸미, 해삼 놓고 폰즈 뿌려 마무리.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
 								<br />
 								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
@@ -236,7 +229,7 @@
 								<h3>요구사항</h3>
 								<br />가. 찜 속재료는 각각 썰어 간 하시오.
 								<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
-								<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
+    							<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
 							</ol>
 						</section>
 						<hr />
