--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -210,7 +210,7 @@
 						<hr />
 						<section id="no6" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<h1>해삼초회</h1>
+							<h1>해삼초회(20분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
 									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
@@ -235,24 +235,14 @@
 						<hr />
 						<section id="no7" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<h1>도미머리맑은국</h1>
+							<h1>도미머리맑은국(30분)</h1>
 							<ol>
-								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-									만든다.</li>
-								<li>속재료를 데칠 물을 끓여둔다.</li>
-								<li>쑷갓 : 찬물 / 레몬 : 오리발 깍기 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
-								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
-								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장 / 새우 : 사방 1Cm(만일 안
-									깐새우면 아래에서 대친 다음에 껍질 까서 사방 1Cm - 머리따서 내장손으로 제거).</li>
-								<li>끓는물에 채반으로 데치기 : 은행, 죽순, 생선살, 닭가슴살.</li>
-								<li>달걀물은 반드시 체반에 달걀심을 제거해주고 거기에 가쓰오다시 1/2C+청주 1t+맛술 1t+소금
-									넣어서 섞는다.- Tip: 달걀(1) : 가쓰오다시물(2) 비율.</li>
-								<li>냄비에 중탕으로 달걀찜 (냄비에 행주를 깔고 물을 넣은 후 위에 접시를 넣고 꾹꾹 눌러서 넘치지
-									않을정도로 물을 넣는다-그 위에 공기에 담은 재료들과 달걀물을 넣어서 8분정도 익힌다 (*공기 기포가 생기지
-									않도록 채반에 달걀물을 걸러서 곱게 내린 달걀물을 넣는다)-접시를 면포로 감싸서 올려두는게 중간게 계란 시간
-									체크하기 좋다.</li>
-								<li>푸딩처럼 익었으면 표고 버섯을 올리고 뜸들인다. 그후에 제출할때 오리발과 쑥갓을 올려서 제출한다.</li>
+								<li>도미손질: 도미머리 2등분 - 소금 - 데침.</li>
+								<li>대파 4~5Cm 채 -찬물.</li>
+								<li>죽순-편썰어 데침.</li>
+								<li>레몬: 오리발.</li>
+								<li>물 2C + 다시마 + 도미머리 + - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러 간장약간, 청주약간, 소금.</li>
+								<li>도미머리, 육수, 오리발, 대파, 올려 제출.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
 								<br />
 								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
@@ -269,10 +259,8 @@
 							<br /> <br /> <br />
 							<h1>도미조림</h1>
 							<ol>
-								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-									만든다.</li>
-								<li>속재료를 데칠 물을 끓여둔다.</li>
+								<li>다시물 1C.</li>
+								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형 - 소금, 데치기.</li>
 								<li>쑷갓 : 찬물 / 레몬 : 오리발 깍기 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
 								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
 								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장 / 새우 : 사방 1Cm(만일 안
