--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -227,9 +227,11 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 찜 속재료는 각각 썰어 간 하시오.
-								<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
-    							<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
+								<br />가. 오이를 둥글게 썰거나 줄무늬(자바라)썰기하여 사용하시오.
+								<br />나. 미역을 손질하여 4~5cm 정도로 써시오.
+    							<br />다. 해삼은 내장과 모래가 없도록 손질하고 힘줄(스지)을 제거하시오.
+    							<br />라. 빨간 무즙(아까오로시)과 실파를 준비하시오.
+    							<br />마. 초긴장(폰즈)을 끼얹어 내시오.
 							</ol>
 						</section>
 						<hr />
