--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -221,9 +221,7 @@
 								<li>미역: 불린 후 데쳐 미역말이 - 4Cm 성형.</li>
 								<li>해삼: 입과 항문 자르고 중앙(배쪽) 잘라서 내장, 힘줄 제거 - 1Cm 두께로 성형.</li>
 								<li>완성접시에 오이, 미역, 야꾸미, 해삼 놓고 폰즈 뿌려 마무리.</li>
-								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
-								<br />
-								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
+								<br />* 숙지 또 숙지.
 								<br />
 								<br />
 								<h3>요구사항</h3>
@@ -245,15 +243,16 @@
 								<li>레몬: 오리발.</li>
 								<li>물 2C + 다시마 + 도미머리 + - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러 간장약간, 청주약간, 소금.</li>
 								<li>도미머리, 육수, 오리발, 대파, 올려 제출.</li>
-								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
-								<br />
-								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
+								<br />* 숙지 또 숙지
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 찜 속재료는 각각 썰어 간 하시오.
-								<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
-								<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
+								<br />가. 도미머리 부분을 반으로 갈라 50~60g 크기로 사용 하시오.
+								<br />(단, 도미는 머리만 사용하여야 하고, 도미 몸통(살) 사용할 경우 오작 처리)
+								<br />나. 소금을 뿌려 놓았다가 끓는 물에 데쳐 손질하시오.
+								<br />다. 다사마와 도미머리를 넣어 은근하게 국물을 만들어 간 하시오.
+								<br />라. 대파의 흰 부분은 가늘게 채(시라가네기) 썰어 사용 하시오.
+								<br />마. 간을 하여 각 곁들일 재료를 넣어 국물을 부어 완성하시오.
 							</ol>
 						</section>
 						<hr />
@@ -268,15 +267,14 @@
 								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
 								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고 꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
-								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
-								<br />
-								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
+								<br />* 시간 없음
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 찜 속재료는 각각 썰어 간 하시오.
-								<br />나. 나중에 넣을 것과 처음에 넣을 것을 구분하시오.
-								<br />다. 가다랑어포로 다시(국물)를 만들어 식혀서 달걀과 섞으시오
+								<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
+								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
+								<br />다. 냄비에 앉혀 양념하여 조리하시오.
+								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
 							</ol>
 						</section>
 						<hr />
