--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -275,6 +275,9 @@
 								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
 								<br />다. 냄비에 앉혀 양념하여 조리하시오.
 								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
+								<br />1.파이낸셜 컨펌
+								<br />2.인스팩션
+								<br />3.콘토상태 서티
 							</ol>
 						</section>
 						<hr />
