--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -191,11 +191,14 @@
 							<h1>도미술찜</h1>
 							<ol>
 								<li>다시물 1/2C, 쑥갓: 찬물.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 - 소금 - 생선 데치기.</li>
-								<li>무: 은행잎&야꾸미 / 당근: 매화 / 죽순:빗살 편 / 배추&쑥갓말이 / 표고: 별모양 / 두부: 직사각형.</li>
+								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 -
+									소금 - 생선 데치기.</li>
+								<li>무: 은행잎&야꾸미 / 당근: 매화 / 죽순:빗살 편 / 배추&쑥갓말이 / 표고: 별모양 / 두부:
+									직사각형.</li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
 								<li>폰즈 = 다시물, 식초, 간장 각각 1T.</li>
-								<li>청주 알코올 날리기 + 다시물 + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓 올려제출(야꾸미, 폰즈 함께 제출).</li>
+								<li>청주 알코올 날리기 + 다시물 + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
+									올려제출(야꾸미, 폰즈 함께 제출).</li>
 								<br />* 순서를 잘 기억하고 최적화 해둬야 함(시간 모자름).
 								<br />
 								<br />
@@ -227,9 +230,9 @@
 								<h3>요구사항</h3>
 								<br />가. 오이를 둥글게 썰거나 줄무늬(자바라)썰기하여 사용하시오.
 								<br />나. 미역을 손질하여 4~5cm 정도로 써시오.
-    							<br />다. 해삼은 내장과 모래가 없도록 손질하고 힘줄(스지)을 제거하시오.
-    							<br />라. 빨간 무즙(아까오로시)과 실파를 준비하시오.
-    							<br />마. 초긴장(폰즈)을 끼얹어 내시오.
+								<br />다. 해삼은 내장과 모래가 없도록 손질하고 힘줄(스지)을 제거하시오.
+								<br />라. 빨간 무즙(아까오로시)과 실파를 준비하시오.
+								<br />마. 초긴장(폰즈)을 끼얹어 내시오.
 							</ol>
 						</section>
 						<hr />
@@ -241,7 +244,8 @@
 								<li>대파 4~5Cm 채 -찬물.</li>
 								<li>죽순-편썰어 데침.</li>
 								<li>레몬: 오리발.</li>
-								<li>물 2C + 다시마 + 도미머리 + - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러 간장약간, 청주약간, 소금.</li>
+								<li>물 2C + 다시마 + 도미머리 + - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러
+									간장약간, 청주약간, 소금.</li>
 								<li>도미머리, 육수, 오리발, 대파, 올려 제출.</li>
 								<br />* 숙지 또 숙지
 								<br />
@@ -261,11 +265,13 @@
 							<h1>도미조림</h1>
 							<ol>
 								<li>다시물 1C.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형 - 소금, 데치기.</li>
-								<li>생강: 하리쇼가(얇게 채) - 찬물  / 꽈리고추 : 꼭지 제거.</li>
+								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
+									- 소금, 데치기.</li>
+								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
 								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고 꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
+								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
+									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
 								<br />* 시간 없음
 								<br />
@@ -278,6 +284,13 @@
 								<br />1.파이낸셜 컨펌
 								<br />2.인스팩션
 								<br />3.콘토상태 서티
+								<br />1.오퍼서류의 법률적 점검
+								<br />2. Seller의 소유권확인
+								<br />3.집에걸린 Claim 여부 확인하고 필요시 등기이전전까지 해결요구
+								<br />4.재산세 납부여부 확인
+								<br />5.취득세 금액산정 및 대납
+								<br />6.전기, 가스대금의 날짜별 정산
+								<br />7.클로징데이에 소유권이전 등기, 잔금납부, 키수령 역할
 							</ol>
 						</section>
 						<hr />
