--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -34,6 +34,10 @@
 						<li class="active"><a href="#no6">해삼초회</a></li>
 						<li class="active"><a href="#no7">도미머리맑은국</a></li>
 						<li class="active"><a href="#no8">도미조림</a></li>
+						<li class="active"><a href="#no9">김초밥</a></li>
+						<li class="active"><a href="#no10">대합맑은국</a></li>
+						<li class="active"><a href="#no11">갑오징어명란무침</a></li>
+						<li class="active"><a href="#no12">야끼우동</a></li>
 					</ul>
 					                      <span
 						style="background-color: #d9534f; color: #ffffff; font-size: 18.0px; font-weight: bold; text-align: center; white-space: nowrap;"></span>
