--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -69,13 +69,14 @@
 					<span
 						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987;">Food
 						blog </span> <br /> <br /> <br />
-						
+
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<div>
-							<img src="../images/20200502_143812.jpg" alt="picture 1" width = "560" height ="340" align = "center">
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
 							</div>
 							<h1>소고기덮밥(30분)</h1>
 							<ol>
@@ -269,6 +270,30 @@
 						</section>
 						<hr />
 						<section id="no8" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
+							<h1>도미조림</h1>
+							<ol>
+								<li>다시물 1C.</li>
+								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
+									- 소금, 데치기.</li>
+								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
+								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
+								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
+								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
+									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
+								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
+								<br />* 시간 없음
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
+								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
+								<br />다. 냄비에 앉혀 양념하여 조리하시오.
+								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1>도미조림</h1>
 							<ol>
