--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -91,6 +91,8 @@
 								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 풀어둔 계란을
 									전체적으로 뿌린다(80%정도까지만 익힘).</li>
 								<li>밥위에 7번에서 완성한 돈부리다시 소스를 올리고 - 김채 올려서 마무리.</li>
+								<br />* 맛술(미림)과 청주의 차이: 맛술은 청주에 비해 달고 윤기와 광택을 내어준다.(맛술을 졸이면 시럽처럼 된다. 그래서 조림에 많이 쓴다)
+								<br />
 								<br />* 계란은 반숙이 되도록 해야 함.
 								<br />
 								<br />* 밥이 보이지 않도록 잘 덮어야 함. - 미리 밥모양이 잘 나오게 살짝 볼록하게 밥을 자리 잡아
@@ -300,11 +302,10 @@
 								<li>깻잎: 찬물 / 배합초 : 식초 3T, 설탕 2T, 소금 1t - 밥에 넣어 코팅.</li>
 								<li>생강: 얇게 편썰어 데친 후 배합초 절임 -> 장미모양.</li>
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
-								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
-									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
-								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
+								<li>박고지: 불린 후 데치기 - 간장 2T+설탕 2T+미림2T+물1/2C,.</li>
+								<li>달걀: 설탕1/2t+맛술1t+소금1/4t - 체 - 달걀말이 후 사방 1cm</li>
+								<li>김 구운 후 함김 식히기 - 김에 밥 2/3정도  펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥 끝과 끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
+								<li>깻잎(5각형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
 								<br />* 시간 없음
 								<br />
 								<br />
