--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -319,11 +319,10 @@
 						<hr />
 						<section id="no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<h1>도미조림</h1>
+							<h1>대합맑은국</h1>
 							<ol>
-								<li>다시물 1C.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
-									- 소금, 데치기.</li>
+								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
+								<li>레몬: 오리발.</li>
 								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
 								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
