--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -323,13 +323,11 @@
 							<ol>
 								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
 								<li>레몬: 오리발.</li>
-								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
-								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
-									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
-								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
-								<br />* 시간 없음
+								<li>물 2C + 다시마 + 조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
+								<li>조게 입벌리면 건져 껍데기 한쪽 제거 - 완성접시에 담기.</li>
+								<li>면보에 육수 거른 후 간장, 청주, 소금 간하고 다시 끓여서 완성 접시 담기.</li>
+								<li>쑥갓 레몬 올려 마무리.</li>
+								<br />* 시간 여유 있음(쌩큐 아이템)
 								<br />
 								<br />
 								<h3>요구사항</h3>
