--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -340,18 +340,14 @@
 						<hr />
 						<section id="no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<h1>도미조림</h1>
+							<h1>갑오징어명란무침</h1>
 							<ol>
-								<li>다시물 1C.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
-									- 소금, 데치기.</li>
-								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
-								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
-									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
-								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
-								<br />* 시간 없음
+								<li>깻잎, 무순: 찬물.</li>
+								<li>갑오징어: 0.3cm로 두깨로 포 뜬 후 채 - 50도 청주물에 데치기.</li>
+								<li>명란젓: 알.</li>
+								<li>오징어 + 명란젓 = 3 : 1 (매화색) - 버무리기.</li>
+								<li>10시 깻잎 깔고 갑오징어무침 담고 무순 올려 마무리.</li>
+								<br />* 시간 많음
 								<br />
 								<br />
 								<h3>요구사항</h3>
