--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -360,17 +360,14 @@
 						<hr />
 						<section id="no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<h1>도미조림</h1>
+							<h1>야끼우동</h1>
 							<ol>
-								<li>다시물 1C.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
-									- 소금, 데치기.</li>
-								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
-								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
-									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
-								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
+								<li>숙주: 거두절미.</li>
+								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
+								<li>새우: 내장 껍질 제거.</li>
+								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
+								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
+								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주, 참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
