--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -310,10 +310,10 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
-								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
-								<br />다. 냄비에 앉혀 양념하여 조리하시오.
-								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
+								<br />가. 박고지, 달걀말이, 오이 등 김초밥 속재료를 만드시오.
+								<br />나. 초밥초를 만들어 밥에 간하여 식히시오.
+								<br />다. 김초밥은 일정한 두께와 크기로 8등분하여 담으시오.
+								<br />라. 간장을 곁들여 제출하시오.
 							</ol>
 						</section>
 						<hr />
