--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -331,10 +331,8 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
-								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
-								<br />다. 냄비에 앉혀 양념하여 조리하시오.
-								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
+								<br />가. 조개상태를 확인한 후 해감하여 사용하시오.
+								<br />나. 다시마와 백합조개를 넣어 끓으면 다시마를 건져내시오.
 							</ol>
 						</section>
 						<hr />
