--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -369,10 +369,10 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
-								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
-								<br />다. 냄비에 앉혀 양념하여 조리하시오.
-								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
+								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
+								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
+								<br />다. 우동은 데쳐 사용하시오.
+								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
 							</ol>
 						</section>
 						<hr />
