--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -91,7 +91,8 @@
 								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 풀어둔 계란을
 									전체적으로 뿌린다(80%정도까지만 익힘).</li>
 								<li>밥위에 7번에서 완성한 돈부리다시 소스를 올리고 - 김채 올려서 마무리.</li>
-								<br />* 맛술(미림)과 청주의 차이: 맛술은 청주에 비해 달고 윤기와 광택을 내어준다.(맛술을 졸이면 시럽처럼 된다. 그래서 조림에 많이 쓴다)
+								<br />* 맛술(미림)과 청주의 차이: 맛술은 청주에 비해 달고 윤기와 광택을 내어준다.(맛술을 졸이면
+								시럽처럼 된다. 그래서 조림에 많이 쓴다)
 								<br />
 								<br />* 계란은 반숙이 되도록 해야 함.
 								<br />
@@ -108,6 +109,10 @@
 						<hr />
 						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>메밀국수(자루소바)(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1C : 물 1C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서 가쓰오부시를
@@ -144,6 +149,10 @@
 						<hr />
 						<section id="no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>전복버터구이(25분)</h1>
 							<ol>
 								<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
@@ -167,6 +176,10 @@
 						<hr />
 						<section id="no4" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>달걀찜(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
@@ -199,6 +212,10 @@
 						<hr />
 						<section id="no5" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>도미술찜</h1>
 							<ol>
 								<li>다시물 1/2C, 쑥갓: 찬물.</li>
@@ -224,6 +241,10 @@
 						<hr />
 						<section id="no6" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>해삼초회(20분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
@@ -249,6 +270,10 @@
 						<hr />
 						<section id="no7" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>도미머리맑은국(30분)</h1>
 							<ol>
 								<li>도미손질: 도미머리 2등분 - 소금 - 데침.</li>
@@ -273,6 +298,10 @@
 						<hr />
 						<section id="no8" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>도미조림</h1>
 							<ol>
 								<li>다시물 1C.</li>
@@ -297,6 +326,10 @@
 						<hr />
 						<section id="no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>김초밥</h1>
 							<ol>
 								<li>깻잎: 찬물 / 배합초 : 식초 3T, 설탕 2T, 소금 1t - 밥에 넣어 코팅.</li>
@@ -304,7 +337,8 @@
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
 								<li>박고지: 불린 후 데치기 - 간장 2T+설탕 2T+미림2T+물1/2C,.</li>
 								<li>달걀: 설탕1/2t+맛술1t+소금1/4t - 체 - 달걀말이 후 사방 1cm</li>
-								<li>김 구운 후 함김 식히기 - 김에 밥 2/3정도  펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥 끝과 끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
+								<li>김 구운 후 함김 식히기 - 김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥
+									끝과 끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
 								<li>깻잎(5각형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
 								<br />* 시간 없음
 								<br />
@@ -319,6 +353,10 @@
 						<hr />
 						<section id="no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>대합맑은국</h1>
 							<ol>
 								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
@@ -338,6 +376,10 @@
 						<hr />
 						<section id="no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>갑오징어명란무침</h1>
 							<ol>
 								<li>깻잎, 무순: 찬물.</li>
@@ -357,6 +399,10 @@
 						<hr />
 						<section id="no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200502_143812.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
 							<h1>야끼우동</h1>
 							<ol>
 								<li>숙주: 거두절미.</li>
@@ -364,7 +410,8 @@
 								<li>새우: 내장 껍질 제거.</li>
 								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
 								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주, 참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
+									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
