--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -110,7 +110,7 @@
 						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<div>
-								<img src="../images/20200502_143812.jpg" alt="picture 1"
+								<img src="../images/돈부리_메밀국수.jpg" alt="picture 2"
 									width="560" height="340" align="center">
 							</div>
 							<h1>메밀국수(자루소바)(30분)</h1>
